add test directory & move index.html

--- a/test/index.html
+++ b/test/index.html
@@ -16,7 +16,7 @@
 		<button id="flipH" type="button">flip horizontal</button>
 		<button id="restore" type="button">take back</button>
 	</div>
-<script src="canvasImgViewer.js"></script>
+<script src="../canvasImgViewer.js"></script>
 <script>
 var viewer = new CanvasImgViewer('canvasImgViewer', 'IMG_8803.jpg');
 
